# clara

./: .dockerignore  .gitignore  ACCESSIBILITY.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  ROADMAP.md  docker-compose.yml  pyproject.toml  render.yaml
.claude/: launch.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  language_pack.md
.github/workflows/: ci.yml  release.yml
api/: main.py
clara/: __init__.py  auth.py  board.py  cli.py  easyread.py  export.py  facts.py  i18n.py  ingest.py  pictograms.py  pipeline.py  profile.py  proxy.py  readability.py  review.py  semantic.py  serialize.py  simplify.py  structure.py  verify.py
clara/data/: board.json  mulberry_en.json  ui_i18n.json
clara/lang/: __init__.py  base.py  de.py  en.py  es.py  fr.py  ru.py
clara/llm/: __init__.py  base.py
docs/: accessibility-profile.md  accessibility-profile.schema.json  validation-protocol.md
docs/ru/: validation-protocol.md  voi-outreach.md
scripts/: check_ui_js.py
tests/: test_auth.py  test_board.py  test_chunk.py  test_easyread.py  test_eval.py  test_export.py  test_facts.py  test_i18n.py  test_ingest.py  test_lang.py  test_llm.py  test_pipeline.py  test_profile.py  test_proxy.py  test_readability.py  test_review.py  test_semantic.py  test_serialize.py  test_structure.py  test_symbols.py  test_verify.py
web/: index.html  serve.py
web-next/: Dockerfile  README.md  next.config.mjs  package-lock.json  package.json
web-next/app/: globals.css  layout.tsx  page.tsx
web-next/app/api/clara/[...path]/: route.ts
web-next/app/check/: page.tsx
web-next/app/reviews/: page.tsx
web-next/components/: AuthProvider.tsx  AuthWidget.tsx  EasyReadLines.tsx  FaithfulnessCard.tsx  Nav.tsx  ReadabilityBadges.tsx  ResultPanel.tsx  SemanticCard.tsx
web-next/lib/: api.ts  i18n.tsx  types.ts  ui_i18n.json
