[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clara"
version = "0.1.0"
description = "Turn complex text into verified plain language."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["accessibility", "plain-language", "easy-read", "a11y", "cognitive"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "httpx>=0.24",
]

[project.optional-dependencies]
api = ["fastapi>=0.100", "uvicorn>=0.20"]
ru = ["pymorphy3"]
es = ["simplemma>=1.0"]
de = ["simplemma>=1.0"]
fr = ["simplemma>=1.0"]
pdf = ["weasyprint>=60"]
ingest = ["trafilatura>=1.6", "pypdf>=4", "python-docx>=1.1"]
dev = ["pytest>=7"]

[project.scripts]
clara = "clara.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["clara"]

[tool.pytest.ini_options]
testpaths = ["tests"]
