[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# The import package and CLI stay `clara`; the PyPI distribution is `clara-plain`
# because `clara` is taken (an unrelated 2019 chit-chat utility).
[project]
name = "clara-plain"
version = "0.1.0"
description = "Turn complex text into verified plain language."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Clara contributors" }]
keywords = ["accessibility", "plain-language", "easy-read", "a11y", "cognitive"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Adaptive Technologies",
]
dependencies = [
    "httpx>=0.24",
]

[project.urls]
Homepage = "https://github.com/arieradouble-a11y/clara"
Repository = "https://github.com/arieradouble-a11y/clara"
Issues = "https://github.com/arieradouble-a11y/clara/issues"
Changelog = "https://github.com/arieradouble-a11y/clara/blob/main/CHANGELOG.md"

[project.optional-dependencies]
api = ["fastapi>=0.100", "uvicorn>=0.20"]
ru = ["pymorphy3"]
es = ["simplemma>=1.0"]
de = ["simplemma>=1.0"]
fr = ["simplemma>=1.0"]
pdf = ["weasyprint>=60"]
ingest = ["trafilatura>=1.6", "pypdf>=4", "python-docx>=1.1"]
ocr = ["ocrmypdf>=15"]  # also needs the tesseract binary on PATH
dev = ["pytest>=7"]
lint = ["ruff>=0.6", "mypy>=1.8"]

[project.scripts]
clara = "clara.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["clara"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
# B008: FastAPI's Depends()/Header() in argument defaults is the intended pattern.
ignore = ["B008"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true      # optional extras (httpx, docx, …) aren't typed here
warn_unused_ignores = true
warn_redundant_casts = true
# Pragmatic, not strict: catch real mistakes without demanding full annotations.
check_untyped_defs = true
